// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSizeStyles Get a correct size styles 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "1px",
  },
  "l": Object {
    "height": "1px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "1px",
  },
  "m": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
  "s": Object {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "4px",
  },
  "xl": Object {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xs": Object {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with force aspect ratio 1`] = `
Object {
  "general": Object {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "1px",
  },
  "l": Object {
    "aspect-ratio": 1,
    "height": "100%",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "1px",
  },
  "m": Object {
    "aspect-ratio": 1,
    "height": "100%",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
  "s": Object {
    "aspect-ratio": 1,
    "height": "100%",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "4px",
  },
  "xl": Object {
    "aspect-ratio": 1,
    "height": "100%",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xs": Object {
    "aspect-ratio": 1,
    "height": "100%",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xxl": Object {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
}
`;
